--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="./static/js/app.js"></script>
-<<<<<<< Updated upstream
- <script src="./static/js/bonus.js"></script>
+ 
+
+  <script src="./static/js/bonus.js"></script>
+> <script src="./static/js/app.js"></script>
+
   
-=======
-<!>  
->>>>>>> Stashed changes
+
 </body>
 
 </html>
